text truncate fix

--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,15 @@ button,
     height: 25px;
 }
 
+.text-truncate {
+    display: inline-block;
+    vertical-align: middle;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    max-width: 300px;
+}
+
 .jumbotron img {
     width: 180px;
     height: 180px;
